--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,103 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="application/x-javascript"> addEventListener('load', function () { setTimeout(hideURLbar, 0) }, false)
+
+  function hideURLbar () { window.scrollTo(0, 1) } </script>
+  <!-- //for-mobile-apps -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+  <!-- gallery -->
+  <link rel="stylesheet" href="assets/css/lightGallery.css" type="text/css" media="all"/>
+  <!-- //gallery -->
+  <!-- font-awesome icons -->
+  <link href="assets/css/font-awesome.css" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Jura:300,400,500,600" rel="stylesheet">
+  <link
+    href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic'
+    rel='stylesheet' type='text/css'>
 </head>
 <body>
   <app-root></app-root>
+  <!--banner Slider starts Here-->
+  <script src="assets/js/jquery-2.2.3.min.js"></script>
+  <script src="assets/js/responsiveslides.min.js"></script>
+  <script>
+    $(function () {
+      // Slideshow 4
+      $('#slider3').responsiveSlides({
+        auto: true,
+        pager: false,
+        nav: true,
+        speed: 500,
+        namespace: 'callbacks',
+        before: function () {
+          $('.events').append('<li>before event fired.</li>')
+        },
+        after: function () {
+          $('.events').append('<li>after event fired.</li>')
+        }
+      })
+    })
+  </script>
+  <!-- js -->
+  <!-- start-smoth-scrolling -->
+  <script src='assets/js/lightGallery.js'></script>
+  <script>
+    $(document).ready(function () {
+      $('#lightGallery').lightGallery({
+        mode: 'fade',
+        speed: 800,
+        caption: true,
+        desc: true,
+        mobileSrc: true
+      })
+    })
+  </script>
+
+  <script src='assets/js/owl.carousel.js'></script>
+  <link href='assets/css/owl.theme.css' rel='stylesheet'>
+  <link rel='stylesheet' href='assets/css/owl.carousel.css' type='text/css' media='all'>
+  <script>
+    $(document).ready(function () {
+      $('#owl-demo').owlCarousel({
+        autoPlay: 3000, //Set AutoPlay to 3 seconds
+        autoPlay: true,
+        navigation: true,
+        items: 4,
+        itemsDesktop: [640, 5],
+        itemsDesktopSmall: [414, 4]
+      })
+    })
+  </script>
+  <!-- start-smoth-scrolling -->
+  <script type='text/javascript' src='assets/js/move-top.js'></script>
+  <script type='text/javascript' src='assets/js/easing.js'></script>
+  <script type='text/javascript'>
+    jQuery(document).ready(function ($) {
+      $('.scroll').click(function (event) {
+        event.preventDefault()
+        $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000)
+      })
+    })
+  </script>
+  <!--start - smoth - scrolling -->
+  < !-- //js -->
+  <script src='assets/js/bootstrap.js'></script>
+  < !-- //for bootstrap working -->
+  <!-- here stars scrolling icon -->
+  <script type='text/javascript'>
+    $(document).ready(function () {
+      var defaults = {
+        containerID: 'toTop', // fading element id
+        containerHoverID: 'toTopHover', // fading element hover id
+        scrollSpeed: 1200,
+        easingType: 'linear'
+      }
+      $().UItoTop({ easingType: 'easeOutQuart' })
+    })
+  </script>
+  < !-- //here ends scrolling icon -->
 </body>
 </html>
